Bug 72728, use key affinity for temp and preview runtime sheets. (#2246)